chandeliers-lus/tests/fail/ui/tc/builtin/float-in.stderr
error: Block #0 expects 1 arguments but 2 were given
 --> tests/fail/ui/tc/builtin/float-in.rs:7:13
  |
7 |         x = float_of_int(1, 2);
  |             ^^^^^^^^^^^^^^^^^^
